<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.aml.shushme.MainActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginBottom="24dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"

        android:layout_marginTop="10dp"/>
    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="6dp"

        android:weightSum="1">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_globe_primary_24dp"
            android:layout_weight="0.2"
            android:paddingBottom="4dp"
            android:paddingRight="8dp"
            android:paddingTop="4dp"

        />

        <Switch
            android:id="@+id/enable_switch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/enable_geofence"
            android:layout_alignParentRight="true"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginRight="6dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_weight=".8"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_my_location_primary_24dp"
            android:paddingBottom="4dp"
            android:paddingRight="8dp"
            android:paddingTop="4dp"
            android:layout_weight=".2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_permission"
            android:textColor="@color/colorPrimaryDark"
            android:layout_weight=".7"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            />
        <CheckBox
            android:id="@+id/location_permission_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight=".1"
            android:layout_marginRight="1dp"
            android:onClick="onLocationPermissionClicked" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_notifications_active_primary_24dp"
            android:paddingBottom="4dp"
            android:paddingRight="8dp"
            android:paddingTop="4dp"
            android:layout_weight=".2"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ringer_permission"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorPrimaryDark"
            android:layout_weight=".7"/>
        <CheckBox
            android:id="@+id/ringer_permissions_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight=".1"
            android:layout_marginRight="1dp"
            android:onClick="onRingerPermissionsClicked" />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_new_location"
        android:onClick="onAddPlaceButtonClicked"
        android:id="@+id/BT_add_new_location"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:layout_marginTop="12dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/locations"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="12dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
android:layout_marginTop="4dp"
        android:background="@color/colorPrimary"
        />
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/RV_locations"/>

</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/powered_by_google_light"
            android:layout_gravity="center"
            android:padding="4dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy"
            android:gravity="center"
            android:layout_gravity="center"
            android:autoLink="web"
            android:layout_marginBottom="2dp"/>
    </LinearLayout>
</RelativeLayout>
